Test upgrade transaction in SPD